@@ -40,6 +40,7 @@
       --add-reads com.azure.core.test=ALL-UNNAMED
       --add-opens com.azure.core.test/com.azure.core.test.http=org.junit.platform.commons
       --add-opens com.azure.core.test/com.azure.core.test.models=ALL-UNNAMED
+      --add-opens com.azure.core.test/com.azure.core.test.policy=org.junit.platform.commons
       --add-opens com.azure.core.test/com.azure.core.test.implementation=org.junit.platform.commons
     </javaModulesSurefireArgLine>
 
@@ -94,8 +95,8 @@
     </dependency>
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock-standalone</artifactId>
-      <version>2.24.1</version> <!-- {x-version-update;com.github.tomakehurst:wiremock-standalone;external_dependency} -->
+      <artifactId>wiremock-jre8-standalone</artifactId>
+      <version>2.35.0</version> <!-- {x-version-update;com.github.tomakehurst:wiremock-jre8-standalone;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
